--- a/app/styles/custome-vnc.css
+++ b/app/styles/custome-vnc.css
@@ -5,12 +5,13 @@
     position: absolute;
     top: 0;
     left: 0;
+    right: 0;
     width: 100%;
     pointer-events: none;
     transition: 0.2s ease-in-out;
     opacity: 0;
     visibility: hidden;
-    /* transform: translateY(-25px); */
+    transform: translateY(-45px);
 }
 
 .control-bar-active {
@@ -21,7 +22,7 @@
 
 .arrow-control-bar {
     position: absolute;
-    top: 0 !important;
+    top: 0;
     left: 50%;
     /* display: flex;
     justify-content: center;
@@ -32,14 +33,14 @@
     color: white;
     pointer-events: none;
     cursor: pointer;
-    /* transition: 0.2s ease-in-out; */
-    /* transform: translateY(0px); */
+    transition: 0.2s ease-in-out;
+    transform: translateY(0px);
     z-index: 10;
 }
 
 .arrow-control-bar-active {
-    top: 45px !important;
-    /* transform: translateY(45px); */
+    /* top: 45px !important; */
+    transform: translateY(45px);
 }
 
 .arrow-control-bar img {
