--- a/app/styles/custome-vnc.css
+++ b/app/styles/custome-vnc.css
@@ -22,7 +22,7 @@
 
 .arrow-control-bar {
     position: absolute;
-    top: 0;
+    top: 0 !important;
     left: 50%;
     /* display: flex;
     justify-content: center;
@@ -33,14 +33,27 @@
     color: white;
     pointer-events: none;
     cursor: pointer;
-    transition: 0.2s ease-in-out;
+    /* transition: 0.2s ease-in-out; */
     transform: translateY(0px);
     z-index: 10;
 }
 
+.arrow-control-bar-clone {
+    position: absolute;
+    top: 0 !important;
+    left: 50%;
+    text-align: center;
+    color: white;
+    cursor: pointer;
+    transform: translateY(0px);
+    z-index: 3;
+    /* display: none; */
+    opacity: 0.8;
+}
+
 .arrow-control-bar-active {
-    /* top: 45px !important; */
-    transform: translateY(45px);
+    top: 45px !important;
+    /* transform: translateY(45px); */
 }
 
 .arrow-control-bar img {
@@ -181,4 +194,20 @@
     .settings-icon {
         margin: 3px 0;
     }
+}
+
+
+.test_box_active{
+    z-index: 5;
+    display: block;
+    position: absolute;
+    border: 1px solid yellow;
+}
+
+.test_box_2_active{
+    width: 100%;
+    height: 100%;
+    z-index: 5;
+    display: block;
+    position: absolute;
 }
